--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 	"homepage": "https://github.com/nizarfadlan/baileys-api#readme",
 	"dependencies": {
 		"@hapi/boom": "^10.0.1",
-		"@prisma/client": "^4.16.2",
+		"@prisma/client": "^6.11.0",
 		"axios": "^1.7.7",
 		"baileys": "^6.7.18",
 		"cors": "^2.8.5",
@@ -54,9 +54,9 @@
 		"express-validator": "^7.0.1",
 		"link-preview-js": "^3.0.5",
 		"long": "^5.2.3",
+		"multer": "^1.4.5-lts.1",
 		"pino": "^7.11.0",
 		"pino-pretty": "^11.0.0",
-		"prisma": "^4.16.2",
 		"qrcode": "^1.5.3",
 		"qrcode-terminal": "^0.12.0",
 		"socket.io": "^4.7.5",
@@ -66,6 +66,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^20.11.19",
 		"@types/qrcode": "^1.5.5",
 		"@types/ws": "^8.5.10",
@@ -77,9 +78,11 @@
 		"nodemon": "^3.0.3",
 		"prettier": "^3.2.5",
 		"prettier-plugin-organize-imports": "^3.2.4",
+		"prisma": "^6.11.0",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"tscpaths": "^0.0.9",
+		"tsx": "^4.19.1",
 		"typescript": "^5.3.3"
 	},
 	"engines": {
