--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
 		"module": "CommonJS",
 		"moduleResolution": "Node",
 		"declaration": false,
-		"lib": ["ESNext"],
+		"lib": [
+			"ESNext"
+		],
 		"outDir": "dist/",
 		"baseUrl": ".",
 		"rootDir": "src",
@@ -18,13 +20,25 @@
 		"strictNullChecks": false,
 		"incremental": true,
 		"noImplicitAny": false,
+		"useUnknownInCatchVariables": true,
+		"ignoreDeprecations": "6.0",
 		"paths": {
-			"@/*": ["src/*"]
+			"@/*": [
+				"src/*"
+			]
 		}
 	},
-	"include": ["src"],
-	"exclude": ["node_modules", "prisma", "dist"],
+	"include": [
+		"src"
+	],
+	"exclude": [
+		"node_modules",
+		"prisma",
+		"dist"
+	],
 	"ts-node": {
-		"require": ["tsconfig-paths/register"]
+		"require": [
+			"tsconfig-paths/register"
+		]
 	}
 }
