--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"@hapi/boom": "^10.0.1",
 		"@prisma/client": "^6.11.0",
 		"axios": "^1.7.7",
-		"baileys": "^6.7.21",
+		"baileys": "^7.0.0-rc.9",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
